hack out working dir

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -7,11 +7,6 @@ permissions:
   pull-requests: write
 jobs:
   terraform-plan:
-    env:
-      tf_actions_working_dir: ./work
-    defaults:
-      run:
-        working-directory: ${{ env.tf_actions_working_dir }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -63,7 +58,7 @@ jobs:
       
             </details>
       
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
+            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Workflow: \`${{ github.workflow }}\`*`;
       
             github.rest.issues.createComment({
               issue_number: context.issue.number,
