--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,8 +1,10 @@
 name: terraform-actions
 on: 
   workflow_dispatch:
-  pull_request:
-
+  push:
+    branches:
+      - main
+  
 permissions:
   pull-requests: write
 jobs:
