--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -9,6 +9,10 @@ jobs:
   terraform-plan:
     runs-on: ubuntu-latest
     steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v3
       
