--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -29,7 +29,7 @@ jobs:
           route: GET /search/issues/?q={sha}+repo:{repository}+{conditions}
           repository: ${{ github.repository }} 
           sha: ${{ github.sha }}
-          conditions: "is:pr+is:merged"
+          conditions: 'is:pr+is:merged'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
