--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -22,17 +22,24 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Grab PR number (when applicable)
-        uses: octokit/request-action@v2.1.9
         if: github.event_name == 'push'
         id: get_related_pr
-        with:
-          route: GET /search/issues/?q={sha}+repo:{repository}+is:{is-pr}+is:{is-merged}
-          repository: ${{ github.repository }} 
-          sha: ${{ github.sha }}
-          is-pr: pr
-          is-merged: merged
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: | 
+          curl --url \
+          'https://api.github.com/search/issues/?q=${{ github.sha }}+repo:${{ github.repository }}+is:pr+is:merged'
+
+      # - name: Grab PR number (when applicable)
+      #   uses: octokit/request-action@v2.1.9
+      #   if: github.event_name == 'push'
+      #   id: get_related_pr
+      #   with:
+      #     route: GET /search/issues/?q={sha}+repo:{repository}+is:{is-pr}+is:{is-merged}
+      #     repository: ${{ github.repository }} 
+      #     sha: ${{ github.sha }}
+      #     is-pr: pr
+      #     is-merged: merged
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform fmt check
