--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -44,7 +44,10 @@ jobs:
             github.rest.search.issuesAndPullRequests({
               q: "${{ github.sha }}+repo:${{ github.repository }}+is:pr+is:merged",
             });
-
+      - name: Debug PR return
+        env:
+          OUTPUT: ${{ steps.get_related_pr.outputs.result }}
+        run: "echo $OUTPUT"
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform fmt check
         id: fmt
