--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Debug PR return
         env:
           OUTPUT: ${{ steps.get_related_pr.outputs.result }}
-        run: "echo $OUTPUT"
+        run: "echo ${{ steps.get_related_pr.outputs }}"
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform fmt check
         id: fmt
