--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -41,9 +41,10 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            github.rest.search.issuesAndPullRequests({
+            const shaPR = await github.rest.search.issuesAndPullRequests({
               q: "${{ github.sha }}+repo:${{ github.repository }}+is:pr+is:merged",
             });
+            console.log(shaPR)
       - name: Debug PR return
         env:
           OUTPUT: ${{ fromJson(steps.get_related_pr.outputs.result) }}
