--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -30,7 +30,7 @@ jobs:
       #     repository: ${{ github.repository }} 
       #     sha: ${{ github.sha }}
       #     is-pr: is:pr
-      #     is-merged: is:merged 
+      #     is-merged: is:merged
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -41,13 +41,12 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const shaPR = await github.rest.search.issuesAndPullRequests({
+            github.rest.search.issuesAndPullRequests({
               q: "${{ github.sha }}+repo:${{ github.repository }}+is:pr+is:merged",
             });
-            console.log(shaPR.data)
       - name: Debug PR return
         env:
-          OUTPUT: ${{ fromJson(steps.get_related_pr.outputs.result) }}
+          OUTPUT: ${{ steps.get_related_pr.outputs.data.items.number }}
         run: "echo $OUTPUT"
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform fmt check
