--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -89,7 +89,7 @@ jobs:
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Workflow: \`${{ github.workflow }}\`*`;
             
             github.rest.issues.createComment({
-              issue_number: relatedPR.data.items.number,
+              issue_number: relatedPR.data.items,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
