--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -64,7 +64,7 @@ jobs:
               q: "${{ github.sha }}+repo:${{ github.repository }}+is:pr+is:merged",
             });
             
-            console.log(relatedPR.data.items.number)
+            console.log(relatedPR.data.items)
             const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
@@ -89,7 +89,7 @@ jobs:
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Workflow: \`${{ github.workflow }}\`*`;
             
             github.rest.issues.createComment({
-              issue_number: relatedPR.data.items,
+              issue_number: relatedPR.data.items.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
