--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - '*.tf'
       - '**/*.tf'
-  
+
 permissions:
   pull-requests: write
 jobs:
@@ -15,6 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Configure AWS Credentials Action for GitHub Actions
+        uses: aws-actions/configure-aws-credentials@v4.0.1
+        with:
+          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::169421194568:role/githubActionsAccessS3TerraformState
+  
       - uses: hashicorp/setup-terraform@v3
       - name: Terraform Format Check
         id: fmt
