updating yml fun

--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -4,12 +4,14 @@ on:
   push:
     branches:
       - main
-    paths:
-      - '*.tf'
-      - '**/*.tf'
+    # paths:
+    #   - '*.tf'
+    #   - '**/*.tf'
 
 permissions:
   pull-requests: write
+  id-token: write
+  contents: read
 jobs:
   terraform-apply:
     runs-on: ubuntu-latest
