--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,11 +1,13 @@
 name: terraform-plan
 on: 
   pull_request:
-    paths:
-      - '*.tf'
-      - '**/*.tf'
+    # paths:
+    #   - '*.tf'
+    #   - '**/*.tf'
 permissions:
   pull-requests: write
+  id-token: write
+  contents: read
 jobs:
   terraform-plan:
     runs-on: ubuntu-latest
