--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-    # paths:
-    #   - '*.tf'
-    #   - '**/*.tf'
+    paths:
+      - '*.tf'
+      - '**/*.tf'
 
 permissions:
   pull-requests: write
