--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,9 +1,9 @@
 name: terraform-plan
 on: 
   pull_request:
-    # paths:
-    #   - '*.tf'
-    #   - '**/*.tf'
+    paths:
+      - '*.tf'
+      - '**/*.tf'
 permissions:
   pull-requests: write
   id-token: write
