--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Write Report to PR Comment
         uses: actions/github-script@v6
         if: github.event_name == 'push'
+        continue-on-error: true # if writing fails for some reason, don't mark as failure
         env:
           APPLY: "terraform\n${{ steps.apply.outputs.stdout }}"
         with:
