--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -40,6 +40,7 @@ jobs:
       
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
+        continue-on-error: true # if writing fails for some reason, don't mark as failure
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
