--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -23,7 +23,6 @@ jobs:
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
-        continue-on-error: true
       
       - name: Terraform Init
         id: init
@@ -36,10 +35,9 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color
-        continue-on-error: true
       
       - uses: actions/github-script@v6
-        if: github.event_name == 'pull_request'
+        if: always() && github.event_name == 'pull_request'
         continue-on-error: true # if writing fails for some reason, don't mark as failure
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
