--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -6,10 +6,10 @@ on:
       - '*.tf'
       - '**/*.tf'
 
-permissions:
-  pull-requests: write
-  id-token: write
-  contents: read
+# permissions:
+#   pull-requests: write
+#   id-token: write
+#   contents: read
 jobs:
   terraform-plan:
     uses: ./.github/workflows/reusable_plan.yml
