--- a/.github/workflows/reusable_plan.yml
+++ b/.github/workflows/reusable_plan.yml
@@ -10,10 +10,10 @@ on:
         type: string
         default: 'us-east-2'
 
-# permissions:
-#   pull-requests: write
-#   id-token: write
-#   contents: read
+permissions:
+  pull-requests: write
+  id-token: write
+  contents: read
 jobs:
   terraform-plan:
     runs-on: ubuntu-latest
