--- a/.github/workflows/reusable_apply.yml
+++ b/.github/workflows/reusable_apply.yml
@@ -6,14 +6,10 @@ on:
         required: true
         type: string
       aws-region:
-        required: false
+        required: true
         type: string
         default: 'us-east-2'
 
-# permissions:
-#   pull-requests: write
-#   id-token: write
-#   contents: read
 jobs:
   terraform-apply-actual:
     runs-on: ubuntu-latest
